[package]
name = "tcobalt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = "0.11.26"
tokio = { version = "1.37.0", features = ["full"] }

[profile.release]
opt-level = "s"
lto = true
debug = 0
codegen-units = 1
panic = "abort"
strip = true
